crates/graphcal-project/tests/snapshots/error_snapshots__error_domain_invalid_key.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
unknown domain constraint key `limit`
    Diagnostic severity: error
Begin snippet for domain_invalid_key.gcl starting at line 1, column 1

snippet line 1: // domain_invalid_key.gcl -- unknown constraint key
snippet line 2: param mass: Mass(limit: 10.0 kg) = 500.0 kg;
    label at line 2, columns 18 to 22: unknown key
diagnostic help: valid domain constraint keys are `min` and `max`
diagnostic code: graphcal::P005
