crates/graphcal-project/tests/snapshots/error_snapshots__error_domain_violation.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
above maximum (2000 kg)
