crates/graphcal-project/tests/snapshots/error_snapshots__error_duplicate_include_binding.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
duplicate DAG binding `a`
    Diagnostic severity: error
Begin snippet for duplicate_include_binding.gcl starting at line 1, column 1

snippet line 1: include combine(a: 1.0, a: 2.0) as combined;
    label at line 1, column 17: first bound here
    label at line 1, column 25: duplicate binding
diagnostic help: each name may appear at most once in a DAG binding list
diagnostic code: graphcal::P025
