crates/graphcal-project/tests/snapshots/error_snapshots__error_exp_requires_dimensionless.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected Dimensionless or Complex<Dimensionless>, found Length
    Diagnostic severity: error
Begin snippet for exp_requires_dimensionless.gcl starting at line 2, column 1

snippet line 2: param alt: Length = 400.0 km;
snippet line 3: node bad: Dimensionless = exp(@alt);
    label at line 3, columns 31 to 34: has dimension Length
diagnostic help: exp() requires a dimensionless real or complex argument
diagnostic code: graphcal::D001
