crates/graphcal-project/tests/snapshots/error_snapshots__error_expected_fail_all_on_indexed.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
`#[expected_fail]` without arguments on indexed assertion
    Diagnostic severity: error
Begin snippet for expected_fail_all_on_indexed.gcl starting at line 16, column 1

snippet line 16: 
snippet line 17: #[expected_fail]
    label at line 17, columns 1 to 16: this assertion is indexed
snippet line 18: assert power_ok = for m: Mode { @power_use[m] < @power_gen[m] };
diagnostic help: use `#[expected_fail(Index#Variant, ...)]` (qualified `module::Index#Variant` also works) to specify which variants are expected to fail; for finite structural axes use `#[expected_fail(#N, ...)]`
diagnostic code: graphcal::A011
